# EnumaElish

./: .gitignore  .ninja_deps  .ninja_log  0910.md  CMakeCache.txt  CMakeLists.txt  Elish.sln  Elish.vcxproj  PBR和阴影计算技术文档.md  README.md  Shader性能优化和参数调整指南.md  build.ninja  cmake_install.cmake  imgui.ini  run_log.txt  shadow_optimization_final_report.md  ui_enhancement_report.md  ui_optimization_final_report.md  ui_optimization_report.md
.trae/documents/: 修复光线追踪纯色覆盖及变换矩阵失效问题.md
.trae/rules/: project_rules.md
cmake/: ShaderCompile.cmake
documents/: EnumaElish引擎系统总体架构技术文档.md  RayTracingGuide.md  RayTracingPerformanceReport.md  模型系统技术文档.md  阴影光照和场景系统技术文档.md
engine/: CMakeLists.txt  cmake_install.cmake  imgui.ini  main.cpp
engine/content/levels/: levels1.json
engine/runtime/: CMakeLists.txt  cmake_install.cmake  engine.cpp  engine.h
engine/runtime/content/levels/: levels1.json  levels1_minimal.json
engine/runtime/content/scenes/: raytracing_demo_scene.json
engine/runtime/global/: global_context.cpp  global_context.h
engine/runtime/input/: input_system.cpp  input_system.h
engine/runtime/render/: render_camera.cpp  render_camera.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/runtime/render/interface/: rhi.h  rhi_struct.h
engine/runtime/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h
engine/runtime/render/passes/: directional_light_pass.cpp  directional_light_pass.h  main_camera_pass.cpp  main_camera_pass.h  raytracing_pass.cpp  raytracing_pass.h  shadow_optimization_report.md  ui_pass.cpp  ui_pass.h
engine/runtime/shader/: CMakeLists.txt  cmake_install.cmake  test_skybox_shader.md
engine/runtime/shader/glsl/: PBR.frag  PBR.vert  axis.vert  debugdraw.vert  deferred_lighting.frag  mesh.frag  mesh.vert  mesh_directional_light_shadow.frag  mesh_directional_light_shadow.vert  mesh_gbuffer.frag  mesh_inefficient_pick.vert  mesh_point_light_shadow.vert  model.frag  particlebillboard.vert  pic.frag  pic.vert  raytracing.rchit  raytracing.rgen  raytracing.rmiss  shadow.frag  shadow.rmiss  shadow.vert  skybox_new.frag  skybox_new.vert
engine/runtime/shader/include/: gbuffer.h  mesh_lighting.h  mesh_lighting.inl  structures.h
engine/runtime/ui/: asset_browser_ui.cpp  asset_browser_ui.h  window_ui.cpp  window_ui.h
